# custom-os

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bare_metal_x86_64_target.json  create_os_image_no_root.sh  create_os_image_root.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
as_slice_of/: Cargo.toml
as_slice_of/src/: lib.rs
glyph_textures_from_font/: Cargo.toml
glyph_textures_from_font/src/: main.rs
glyph_textures_from_font_lib/: Cargo.toml
glyph_textures_from_font_lib/src/: lib.rs
kernel/: Cargo.toml  Makefile  bare_metal_x86_64_target.json  create_os_image_no_root.sh  disk_image_corrupting_infrequently.md  inspect_esp.sh  limine.cfg  linker_script.ld  rust-toolchain.toml  test_esp.sh  unmount_and_detach_esp.sh
kernel/.cargo/: config.toml
kernel/dependencies/: edk2_target.txt
kernel/src/: cpuid.rs  graphics.rs  interrupts.rs  interrupts_general.rs  limine.rs  main.rs  msr.rs  mtrr.rs  text_rendering.rs
src/: main.rs
