[package]
name = "custom_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
bitflags = "2.5.0"
glyph_textures_from_font_lib = { path = "../glyph_textures_from_font_lib" }
micromath = { version = "2.1.0", features = ["vector"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "lazy"] }
